--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -13,7 +13,26 @@ import CalloutContainer from "../../components/CalloutContainer.astro"
 import CalloutCard from "../../components/CalloutCard.astro"
 import SubSubSubSection from "../../components/SubSubSubSection.astro"
 import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
+import Enumerate from "../../components/Enumerate.astro" 
+import Item from "../../components/Item.astro" 
+import Itemize from "../../components/Itemize.astro"
 ---
+
+<style>
+  .border-below{
+        border-bottom: solid 1px black;
+  }
+
+  .table-collapse{
+    border-collapse: collapse;
+  }
+
+
+  tbody.row-spacing > tr > td {
+    padding-top: .25rem;
+    padding-bottom: .25rem;
+  }
+</style>
 <Layout title="Particle Kinematics">
 <Section title="Particle Kinematics"></Section>
 
@@ -140,7 +159,7 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
                   <td>Ω</td><td>ω</td><td><a href="http://en.wikipedia.org/wiki/Omega">omega</a></td>
                 </tr>
               </table>
-              <p>
+              <p class="mb-0">
                 The Greek alphabet, shown above, was the first true <a
                 href="http://en.wikipedia.org/wiki/Alphabet">alphabet</a>,
                 meaning that it has letters representing <a
@@ -279,14 +298,14 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
               </p>
               <div class="references">
                 <h3>References</h3>
-                <ul class="references">
-                  <li>
+                <Itemize margin="False">
+                  <Item>
                     T. H. Blau.
                     Torque and schizophrenic vulnerability.
                     <i>American Psychologist</i>, 32(12):997–1005, 1977.
                     DOI: <a href="http://dx.doi.org/10.1037/0003-066X.32.12.997">10.1037/0003-066X.32.12.997</a>.
-                  </li>
-                </ul>
+                  </Item>
+                </Itemize>
               </div>
         </CalloutCard>
     </CalloutContainer>
@@ -544,7 +563,7 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
 
   <CalloutContainer slot="cards">
     <CalloutCard title="Notation note">
-      <p>
+      <p class="mb-0">
         The tangential/normal basis is also called the
         Frenet–Serret frame after <a
         href="http://en.wikipedia.org/wiki/Jean_Fr%C3%A9d%C3%A9ric_Frenet">Jean
@@ -555,21 +574,16 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
         basis derivatives are often called the <a
         href="http://en.wikipedia.org/wiki/Frenet%E2%80%93Serret_formulas">Frenet-Serret
         formulas</a>, typically written in terms of \(s\) derivatives:
-
-        <DisplayEquation equation="\\begin{aligned}\\frac{d\\hat{e}_t}{ds} &amp;= \\phantom{-\\kappa\\,\\hat{e}_t - } \\kappa\\,\\hat{e}_n \\\\\\frac{d\\hat{e}_n}{ds} &amp;= -\\kappa\\,\\hat{e}_t \\phantom{ - \\kappa\\,\\hat{e}_n + } + \\tau\\,\\hat{e}_b \\\\\\frac{d\\hat{e}_b}{ds} &amp;=\\phantom{-\\kappa\\,\\hat{e}_t } - \\tau\\,\\hat{e}_n.\\end{aligned}" />
       </p>
-      <p>
-        If we divide the angular velocity vector <a
-        href="#rkt-ew">#rkt-ew</a> by \(v\) then we obtain the
-        vector
 
-        <DisplayEquation equation="\\frac{1}{v} \\vec{\\omega} = \\tau\\,\\hat{e}_t + \\kappa\\,\\hat{e}_b," />
+      <DisplayEquation equation="\\begin{aligned}\\frac{d\\hat{e}_t}{ds} &amp;= \\phantom{-\\kappa\\,\\hat{e}_t - } \\kappa\\,\\hat{e}_n \\\\\\frac{d\\hat{e}_n}{ds} &amp;= -\\kappa\\,\\hat{e}_t \\phantom{ - \\kappa\\,\\hat{e}_n + } + \\tau\\,\\hat{e}_b \\\\\\frac{d\\hat{e}_b}{ds} &amp;=\\phantom{-\\kappa\\,\\hat{e}_t } - \\tau\\,\\hat{e}_n.\\end{aligned}" />
 
-        which is known as the <a
-        href="http://en.wikipedia.org/wiki/Darboux_vector">Darboux
-        vector</a> after its discoverer, <a
-        href="http://en.wikipedia.org/wiki/Gaston_Darboux">Jean
-        Gaston Darboux</a>.
+      <p class="mb-0">
+        If we divide the angular velocity vector <a href="#rkt-ew">#rkt-ew</a> by \(v\) then we obtain the vector
+      </p>
+      <DisplayEquation equation="\\frac{1}{v} \\vec{\\omega} = \\tau\\,\\hat{e}_t + \\kappa\\,\\hat{e}_b," />
+      <p  class="mb-0">
+        which is known as the <a href="http://en.wikipedia.org/wiki/Darboux_vector">Darboux vector</a> after its discoverer, <a href="http://en.wikipedia.org/wiki/Gaston_Darboux">Jean Gaston Darboux</a>.
       </p>
     </CalloutCard>
   </CalloutContainer>
@@ -805,8 +819,284 @@ import DisplayEquationCustom from "../../components/DisplayEquationCustom.astro"
 </SubSubSection>  
 
 <SubSubSection title="Celestial velocities">
-    <BlueText>Complete in "Celestial Velocities".</BlueText> Refers to "angular velocity" and "angular acceleration".
+    <BlueText>Complete in "Celestial Velocities".</BlueText>
+
+    <p>
+      We normally think of our classroom or laboratory as being
+      stationary when we are doing dynamics. But how valid is this
+      assumption?
+    </p>
+    <p>
+      We will consider motion due to:
+    </p>
+    <Enumerate>
+      <Item>Spinning of the Earth about the North-South axis.</Item>
+      <Item>Orbit of the Earth about the Sun.</Item>
+      <Item>Rotation of the Sun around center the Milky Way.</Item>
+      <Item>Motion of the Milky Way through the universe.</Item>
+    </Enumerate>
+
+    <p>
+      As we will see below, some of these velocities are not
+      small. Why is normally valid to assume that we are in an
+      inertial reference frame?
+    </p>
+
+    <CalloutContainer slot="cards">
+      <CalloutCard title="Reference material">
+        <Itemize margin="False">
+          <Item>Elementary motions</Item>
+        </Itemize>
+      </CalloutCard>
+      <CalloutCard title="Concepts applied">
+        <Itemize margin="False">
+          <Item>Angular velocity</Item>
+          <Item>Angular acceleration</Item>
+        </Itemize>
+      </CalloutCard>
+    </CalloutContainer>
 </SubSubSection>
+
+<SubSubSubSection title="Periods of rotation">
+  <p>
+    The different types of motion have magnitudes roughly given
+    in the following table. These motions are not all in the
+    same direction, and may add to each other or act in opposite
+    or even orthogonal directions.
+  </p>
+
+  <table id="aov-tv" class="table-collapse text-center w-100" style="font-size: 1rem;">
+    <thead>
+      <tr class="border-below">
+        <th></th>
+        <th>Earth spin</th>
+        <th>Earth orbit</th>
+        <th>Milky Way</th>
+        <th>Through <a href="http://en.wikipedia.org/wiki/Cosmic_microwave_background">CMB</a></th>
+      </tr>
+    </thead>
+    <tbody class='row-spacing'>
+    <tr>
+      <td>period \(T\)</td>
+      <td>\(24\rm\ h\)</td>
+      <td>\(365\rm\ d\)</td>
+      <td>\(200\rm\ My\)</td>
+      <td></td>
+    </tr>
+    <tr class="border-below">
+      <td></td>
+      <td>\(8.64 \times 10^4\rm\ s\)</td>
+      <td>\(3.16 \times 10^7\rm\ s\)</td>
+      <td><InlineEquation equation="6.31 \\times 10^{15}\\rm\\ s" /></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>radius \(r\)</td>
+      <td>\(6370\rm\ km\)</td>
+      <td>\(1\rm\ AU\)</td>
+      <td>\(27.2\rm\ kly\)</td>
+      <td></td>
+    </tr>
+    <tr class="border-below">
+      <td></td>
+      <td>\(6.37 \times 10^6\rm\ m\)</td>
+      <td><InlineEquation equation="1.50 \\times 10^{11}\\rm\\ s" /></td>
+      <td><InlineEquation equation="2.57 \\times 10^{20}\\rm\\ s" /></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>ang. vel.</td>
+      <td>\(15.0^\circ/\rm h\)</td>
+      <td>\(0.986^\circ/\rm d\)</td>
+      <td>\(1.8^\circ/\rm My\)</td>
+      <td></td>
+    </tr>
+    <tr class="border-below">
+      <td>\(\omega = 2\pi/T\)</td>
+      <td><InlineEquation equation="7.27 \\times 10^{-5}\\rm\\ s" /></td>
+      <td><InlineEquation equation="1.99 \\times 10^{-7}\\rm\\ s" /></td>
+      <td><InlineEquation equation="9.97 \\times 10^{-16}\\rm\\ s" /></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>velocity</td>
+      <td>\(1670\rm\ km/h\)</td>
+      <td>\(107\,000\rm\ km/h\)</td>
+      <td>\(922\,000\rm\ km/h\)</td>
+      <td>\(1\,990\,000\rm\ km/h\)</td>
+    </tr>
+    <tr class="border-below">
+      <td>\(v = r\omega\)</td>
+      <td>\(4.63 \times 10^2\rm\ m/s\)</td>
+      <td>\(2.98 \times 10^4\rm\ m/s\)</td>
+      <td>\(2.56 \times 10^5\rm\ m/s\)</td>
+      <td>\(5.52 \times 10^5\rm\ m/s\)</td>
+    </tr>
+    <tr>
+      <td>acceleration</td>
+      <td>\(0.343\%\ g\)</td>
+      <td>\(0.0605\%\ g\)</td>
+      <td>\(2.60 \times 10^{-9} \%\ g\)</td>
+      <td></td>
+    </tr>
+    <tr class="border-below">
+      <td>\(a = r\omega^2\)</td>
+      <td><InlineEquation equation="3.37 \\times 10^{-2}\\rm\\ m/s^2" /></td>
+      <td><InlineEquation equation="5.93 \\times 10^{-3}\\rm\\ m/s^2" /></td>
+      <td><InlineEquation equation="2.55 \\times 10^{-10}\\rm\\ m/s^2" /></td>
+      <td></td>
+    </tr>
+    </tbody>
+  </table>
+
+  <CalloutContainer slot="cards">
+    <CalloutCard>
+      <p>
+        The first people to have a rough idea of the radius of the
+        Earth and the distance to the Sun were the ancient
+        Greeks. <a
+        href="http://en.wikipedia.org/wiki/Eratosthenes">Eratosthenes</a>
+        (276–195 BCE) computed the radius of the Earth to be
+        40 000 <a
+        href="http://en.wikipedia.org/wiki/Stadion_(unit_of_length)">stadia</a>
+        (6800 km) by measuring the difference in Sun angle between
+        <a href="http://en.wikipedia.org/wiki/Aswan">Aswan</a> and
+        <a
+        href="http://en.wikipedia.org/wiki/Alexandria">Alexandria</a>.
+      </p>
+      <p class="mb-0">
+        <a
+        href="http://en.wikipedia.org/wiki/Aristarchus_of_Samos">Aristarchus
+        of Samos</a> (310–230 BCE) obtained the <a
+        href="http://en.wikipedia.org/wiki/Aristarchus_On_the_Sizes_and_Distances">first
+        estimates</a> of the distance to the Sun by using
+        observations of lunar eclipses and solar <a
+        href="http://en.wikipedia.org/wiki/Parallax">parallax</a>. While
+        his method was in principle correct, poor observational
+        data meant that his computed Earth-Sun distance was quite
+        inaccurate.
+      </p>
+    </CalloutCard>
+  </CalloutContainer>
+</SubSubSubSection>
+
+<SubSubSubSection title="Solar and sidereal time">
+  <p>
+    We all know that one day is 24 hours long. But the period of
+    the Earth's rotation is not 24 hours! This is because of the
+    difference between <i>solar time</i> and <i>sidereal
+    time</i>. Solar time is the time measured against the Sun,
+    as we normally do. Sidereal time is measured against the
+    stars, which is slightly different.
+  </p>
+
+  <PrairieDrawCanvas id="aov-fe-c" width="600" height="600">
+    <button class="anim-toggle:aov-fe-c" onclick="aov_fe_c.toggleAnim()">animate</button>
+    <button class="reset:aov-fe-c" onclick="aov_fe_c.reset()">reset</button>
+    <p class="figureCaption mt-3">
+      Schematic of the Earth's rotation about its own axis and
+      about the sun, counting solar days and sidereal days. Here
+      the Earth has just 8 solar days per year for better
+      visualization.
+    </p>
+  </PrairieDrawCanvas>
+
+  <p>
+    As we can see above, the Earth rotates one more sidereal day
+    each year than solar days. This means:
+  </p>
+  <p>
+    <DisplayEquation equation="\\text{1 solar year} = \\text{365 solar days}= \\text{366 sidereal days}" />
+  </p>
+  <p>
+    and so:
+  </p>
+  <p>
+    <DisplayEquation equation="\\begin{aligned}\\text{sidereal day} &amp;= \\frac{365}{366}\\ \\text{solar day} \\\\&amp;= \\frac{365}{366} \\times 24\\ {\\rm h} \\\\&amp;= 23.93{\\rm\\ h} \\\\&amp;= 23{\\rm\\ h}\\ 56{\\rm\\ min}\\end{aligned}" /> 
+  </p>
+  <p>
+    The Earth's orbital angular velocity is thus actually
+    <InlineEquation equation="\\omega = 360^\\circ / (23.93{\\rm\\ h}) = 15.04^\\circ/\\rm h" />.
+  </p>
+  <p>
+    The relationship between solar and sidereal days can also be
+    computed by considering just a single day, as shown
+    below.
+  </p>
+
+  <PrairieDrawCanvas id="aov-fd-c" width="600" height="600">
+    <p class="figureCaption">
+      Diagram of one solar day and one sidereal day for the
+      Earth, not drawn to scale. The fact that <InlineEquation equation="\\omega_{\\rm E}" />
+      and <InlineEquation equation="\\omega_{\\rm S}" /> are in the same direction means that
+      sidereal days are shorter than solar days (this is <a
+      href="http://en.wikipedia.org/wiki/Nebular_hypothesis">not
+      a coincidence</a>).
+    </p>
+  </PrairieDrawCanvas>
+
+  <p>
+    Just as for the definition of a day, there is a similar
+    distinction between the <em>synodic lunar month</em>, which
+    is the time between passes of the Moon between the Earth and
+    the Sun, and the <em>sidereal lunar month</em>, which is the
+    orbital period of the Moon in an inertial frame. In common
+    usage, the phrase <em>lunar month</em> refers to the synodic
+    month.
+  </p>
+
+  <CalloutContainer slot="cards">
+    <CalloutCard>
+      <p>
+        Just as sidereal days and solar days are different, the
+        exact length of one year depends on how we define it. The
+        <em>sidereal year</em> is the time for the Earth to
+        complete one orbit relative to the fixed stars, and has
+        length 365.256363 solar days. The <em>tropical year</em>
+        is the time for the Earth to return to the same point in
+        the seasons, which varies around a value of about
+        365.242189 solar days (about 20 minutes shorter than the
+        sidereal year). These years are different because of the
+        <a
+        href="http://en.wikipedia.org/wiki/Axial_precession">axial
+        precession</a> of the Earth.
+      </p>
+      <p class=mb-0>
+        In common usage the word “year” refers to the tropical
+        year, as the seasons have historically been more important
+        for people than the motion of the stars. Observe that:
+      </p>
+        <div style="font-size: 1rem;">
+          <DisplayEquation equation="365.242 \\approx 365 + \\frac{1}{4} - \\frac{1}{100} + \\frac{1}{400}" />
+        </div>
+        
+      <p>
+        This is why leap years in our <a
+        href="http://en.wikipedia.org/wiki/Gregorian_calendar">Gregorian
+        calendar</a> add an extra day every 4 years, unless the
+        year is a whole century, except every 400 years. If our
+        calendar used sidereal years instead of tropical, the fact
+        that 365.256363 is slightly larger than 365.25 would mean
+        that about every 200 years we would need to have a double
+        leap year, when there would be two extra days (February
+        30?).
+      </p>
+      <p class="mb-0">
+        While leap years occur because the year is not an exact
+        integer number of days, a similar problem is caused by the
+        fact that the solar day is not exactly 24 × 60 × 60
+        seconds. The length of the day actually varies somewhat
+        unpredictably due to tidal friction as well as climactic
+        and geologic events such as glacier formation and mass
+        redistribution in the mantle, both of which change the
+        Earth's moment of inertia. To correct for these variations
+        a <a href="http://en.wikipedia.org/wiki/Leap_second">leap
+        second</a> is occasionally added, in which the last minute
+        of the day has 61 seconds.
+      </p>
+    </CalloutCard>
+  </CalloutContainer>
+</SubSubSubSection>
     
 <SubSubSection title="Track transition curves">
     <BlueText>Complete in "Track transition curves".</BlueText> Refers to "position, velocity, and acceleration" and "Tangential".
