--- a/src/components/CalloutContainer.astro
+++ b/src/components/CalloutContainer.astro
@@ -16,8 +16,8 @@
     }
 </style>
 
-<div class="d-flex flex-column align-items-center w-100 sticky">
-    <div class="card-container px-2">
+<div class="d-flex flex-column align-items-center w-100 sticky mt-2 mt-lg-0">
+    <div class="card-container px-0">
         <slot />
     </div>
     
