--- a/src/components/DisplayEquation.astro
+++ b/src/components/DisplayEquation.astro
@@ -1,5 +1,13 @@
 ---
 const { equation, id="", title="", derivation="", background=""} = Astro.props;
+
+let menu_class;
+
+if (title){
+    menu_class = 'derivation_container';
+}else{
+    menu_class = 'derivation_container_standalone';
+}
 ---
 
 <style>
@@ -7,6 +15,12 @@ const { equation, id="", title="", derivation="", background=""} = Astro.props;
     .derivation_container{
         background-color: #f8f8f8;
         border-top: 1px solid #444;
+        border-radius: 5px;
+    }
+
+    .derivation_container_standalone{
+        background-color: #f8f8f8;
+        border: 1px solid #444;
         border-radius: 5px;
     }
 
@@ -22,18 +36,20 @@ const { equation, id="", title="", derivation="", background=""} = Astro.props;
 
 
 <div id={id} class={background ? 'background-yellow overflow-hidden my-2' : 'mb-2'}>
+    { title &&
     <div class="mb-2 px-2">
         {title && title}{id && <small>{` #${id}`}</small>}
     </div>
+    }
 
     <div style="overflow-y: hidden; overflow-x: auto;">
         {`$$ ${equation} $$`}
     </div>
     
-    {derivation && <button class="btn btn-secondary py-0" id={'derivation_btn_'+id}>Derivation</button>}
+    {derivation && <button class="btn btn-secondary py-0" id={'derivation_btn_'+id}>Derivation +</button>}
     {derivation && 
         <div id={'derivation_menu_'+id}>
-            <div class="derivation_container p-2">
+            <div class={'p-2 ' + menu_class}>
                 <slot />
             </div>
         </div> 
@@ -44,11 +60,15 @@ const { equation, id="", title="", derivation="", background=""} = Astro.props;
 <script define:vars={{id, derivation}} is:inline>
 
     $(document).ready(function(){
-        const menu = $(`#derivation_menu_${id}`)
+        const menu = $(`#derivation_menu_${id}`);
         menu.hide();
+
+        const button = $(`#derivation_btn_${id}`);
         
-        $(`#derivation_btn_${id}`).on('click', function(){
-            menu.slideToggle()
+        button.on('click', function(){
+            menu.slideToggle('fast', function(){
+                button.text(button.text() == 'Derivation +' ? 'Derivation -' : 'Derivation +')
+            })
         })
     })
     
